# soil

./: CMakeLists.txt
src/: SOIL.c  image_DXT.c  stb_image_aug.c
